# pretty_verbose

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: python-publish.yml  test-python.yml
examples/: 0_printig.py  1_overwrite.py  2_task.py  3_processes.py  4_logger.py  overwrite.py  printig.py
pretty_verbose/: __init__.py  error_classes.py  logger_classes.py  messages_classes.py  processes_classes.py
pretty_verbose/constants/: __init__.py  colors.py  error_codes.py
test/: test_messages.py  test_process.py  test_task.py
