[metadata]
name = pretty_verbose
version = 0.0.1

description = Package for beautiful verbose printing in python.
long_description = file: README.md
long_description_content_type = text/markdown

url = https://github.com/ccmorenos/pretty_verbose.git

author = Catalina Moreno
author_email = ccatamorenos@gmail.com
maintainer = Catalina Moreno
maintainer_email = ccatamorenos@gmail.com

license = MIT license

[options]
install_requires =
    colorama==0.4.5
    pandas==1.4.0

packages = find:

[options.packages.find]
where=.
include=pretty_verbose*
exclude=pretty_verbose.tests*
