[metadata]
name = pretty_verbose
version = 0.0.5

description = Package for beautiful verbose printing in python.
long_description = file: README.md
long_description_content_type = text/markdown

url = https://github.com/ccmorenos/pretty_verbose.git

license = MIT license
license_files = LICENSE

author = Catalina Moreno
author_email = ccatamorenos@gmail.com
maintainer = Catalina Moreno
maintainer_email = ccatamorenos@gmail.com

[options]
install_requires =
    colorama
    pandas

packages = find:

[options.packages.find]
where=.
include=pretty_verbose*
